Fix border bug on Safari

--- a/src/components/main-content.scss
+++ b/src/components/main-content.scss
@@ -61,6 +61,7 @@
 		padding: 0 1em;
 		margin-left: 5em;
 		font-family: BebasNeue;
+		border-top: 0;
 		border-bottom: 1px solid;
 		border-image-slice: 1;
 		border-image-source: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 50%, rgba(255,255,255,1) 100%);
